# resolver

./: .env.example  .gitignore  Makefile  PYPI.md  README.md  TODO.md  aptitude-client.bat  aptitude-first-docker-check.cmd  aptitude.example.toml  demo_no_ui_install_result.json  list-server-artifact-formats.cmd  main.py  pyproject.toml
.agents/: README.md  agent.md
.agents/context/: aptitude-client-implementation.md
.agents/memory/: meta.md
.agents/plans/: 01-client-foundation-and-runtime-skeleton.md  02-runtime-read-contract-hard-cut.md  03-registry-read-adapter.md  04-cli-exact-resolve-vertical-slice.md  05-discovery-and-name-based-ux-after-contract-alignment.md  2026-03-22-cli-install-output.md  2026-03-25-architecture-audit-and-cleanup.md  2026-03-25-canonical-architecture-rules-docs.md  2026-03-25-cli-composition-refactor.md  2026-03-25-discovery-boundary-cleanup.md  2026-03-25-discovery-version-selection-separation.md  2026-03-25-documentation-architecture-cleanup.md  2026-03-25-final-candidate-selection-separation.md  2026-03-25-governance-lock-replay-hardening-plan.md  2026-03-25-lock-driven-flow.md  2026-03-25-resolver-determinism.md  2026-03-28-phase-2-productization-plan.md  2026-03-28-plan-a-product-hardening.md  2026-03-28-plan-b-external-interfaces.md  2026-03-28-selection-policy-preferences-and-interactivity.md  2026-04-01-cli-reactive-tui.md  2026-04-01-cli-wizard-replacement.md  2026-04-09-client-policy-configuration-v1.md  2026-04-24-parallel-installation.md  README.md  roadmap.md
.agents/rules/: repo.md
.codex/environments/: environment.toml
.github/workflows/: dev-merge.yml  dev-pr.yml  publish.yml
aptitude_client/: __init__.py  __main__.py
aptitude_client/cache/: __init__.py
aptitude_client/cli/: __init__.py  app.py
aptitude_client/core/: __init__.py
aptitude_client/models/: __init__.py  dependency.py  metrics.py  runtime.py  skill_manifest.py  skill_summary.py
aptitude_client/plugins/: __init__.py
aptitude_client/utils/: __init__.py
docs/: ARCHITECTURE.md  Aptitude Client Architecture.md  Aptitude-Recommended-Libraries.md  Coding-Standards.md  DOMAIN_SCHEMAS.md  MVP.md  Module-Responsibilities.md  README.md  RULES.md  agent_contract_navigation.md  aptitude-recommended-libraries.md  architecture.md  client-prd.md  overview.md  repository-prd.md  rules.md  runtime-read-contract-hard-cut.md  scope.md  server-api-integration-notes.md
docs/architecture/: README.md  cli-interface.md  decision-rules.md  mcp-interface.md  selection-and-governance.md  server-resolver-boundary.md  system-overview.md
docs/changelog/: 01-foundation-service-skeleton-changelog.md  02-immutable-skill-registry-changelog.md  README.md
docs/contributors/: README.md  development-setup.md  documentation-guidelines.md  module-guide.md  testing-and-verification.md
docs/drafts/: resolver-prd.md
docs/graphs/: resolver-demo.dot
docs/openapi/: repository-api-v1.json
docs/reference/: README.md  api-contract.md  archive-artifact-materialization.md  cli-command-reference.md  mcp-server-guide.md  recommended-libraries.md  schema.md  storage-strategy.md
scripts/: aptitude-first-docker-check.ps1  list-server-artifact-formats.ps1
(+384 files in other folders)
