[project]
name = "aptitude-client"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6",
    "httpx>=0.27",
    "packaging>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=25.0",
    "tenacity>=9.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aptitude = "aptitude_client.interfaces.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests that hit the live Aptitude server",
]


