[project]
name = "aptitude-resolver"
version = "0.1.0"
description = "Deterministic package-manager-style resolver for AI skills"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6",
    "httpx>=0.27",
    "packaging>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=25.0",
    "tenacity>=9.0",
    "textual>=8.1.1",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.0.1",
]

[project.scripts]
aptitude = "aptitude_resolver.interfaces.cli.main:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests that hit the live Aptitude server",
]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["diskcache", "tomli"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "_pytest.*"]
ignore_missing_imports = true
follow_imports = "skip"
